templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  # Label for your deployment
  labels:
    app: nginx
    env: prod
spec:
  replicas: 2
  # Found pod with same label as app=nginx
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      # needed for matchLabels
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
