templates/manual-scheduling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: nginx
spec:
  containers:
    - name: web
      image: nginx
  # Manual Scheduling
  nodeName: my-specific-node
