templates/rolling-update-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  # Label for your deployment
  labels:
    app: nginx
    env: prod
spec:
  # Rolling Update Deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
