templates/ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /watch
            backend:
              serviceName: my-service
              servicePort: 80
